EZP-30665: Firefox/Safari overflow-x fix

--- a/src/bundle/Resources/public/css/alloyeditor/alloyeditor-ez.css
+++ b/src/bundle/Resources/public/css/alloyeditor/alloyeditor-ez.css
@@ -722,7 +722,7 @@
     font-size: 16px;
     height: 3em;
     line-height: 28px;
-    margin-right: 0;
+    margin-right: 15px;
     max-height: 44px;
     min-width: 100%;
     padding: 8px 12px;
